@@ -4,6 +4,7 @@ import com.ucelebi.automobile.dto.CountryDTO;
 import com.ucelebi.automobile.facade.CountryFacade;
 import com.ucelebi.automobile.model.City;
 import com.ucelebi.automobile.model.Country;
+import com.ucelebi.automobile.service.CityService;
 import com.ucelebi.automobile.service.CountryService;
 import org.apache.log4j.Logger;
 import org.modelmapper.ModelMapper;
@@ -15,17 +16,20 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class CountryFacadeImpl implements CountryFacade {
 
     private final CountryService countryService;
+    private final CityService cityService;
     private final ModelMapper modelMapper;
     public static Logger log = Logger.getLogger(CountryFacadeImpl.class);
 
     @Autowired
-    public CountryFacadeImpl(CountryService countryService, ModelMapper modelMapper) {
+    public CountryFacadeImpl(CountryService countryService, CityService cityService, ModelMapper modelMapper) {
         this.countryService = countryService;
+        this.cityService = cityService;
         this.modelMapper = modelMapper;
     }
 
@@ -66,7 +70,12 @@ public class CountryFacadeImpl implements CountryFacade {
         country.setActive(entity.isActive());
         country.setName(entity.getName());
         if (entity.getCities() != null && !entity.getCities().isEmpty()) {
-            List<City> cities = entity.getCities().stream().map(c -> modelMapper.map(c, City.class)).toList();
+            List<City> cities = entity.getCities()
+                    .stream()
+                    .map(c->cityService.findCityByCode(c.getCode()))
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .collect(Collectors.toList());
             country.setCities(cities);
         }
         Country updatedCountry = countryService.update(country);
@@ -80,7 +89,7 @@ public class CountryFacadeImpl implements CountryFacade {
         Country country = countryOptional.get();
         try {
             countryService.delete(country);
-        } catch (Exception e) {
+        } catch (RuntimeException e) {
             log.error("Error while deleting country.", e);
         }
     }
